# Offline_download_tool_V2

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig
EspWifiNetworkConfigwechat/miniprogram/pages/index/: index.ts  index.wxml
components/DAP/Include/: DAP_config.h
components/DAP/Source/: DAP.c
components/USBIP/: CMakeLists.txt  usb_descriptor.h  usb_handle.c
elaphureLink_Windows_x64_release/: elaphureLink.Wpf.exe.config
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
main/daplink/: DAP_handle.c  dap_configuration.h  tcp_server.c  tcp_server.h  usbip_server.c
main/wifi/: http_server.c  wifi_configuration.h  wifi_handle.c
